tests/sksl/errors/ReservedNameSampler.glsl
### Compilation failed:

error: 1: name 'sampler1D' is reserved
int sampler1D;
    ^^^^^^^^^
error: 2: name 'sampler1DShadow' is reserved
int sampler1DShadow;
    ^^^^^^^^^^^^^^^
error: 3: name 'sampler2DRectShadow' is reserved
int sampler2DRectShadow;
    ^^^^^^^^^^^^^^^^^^^
error: 4: name 'sampler2DShadow' is reserved
int sampler2DShadow;
    ^^^^^^^^^^^^^^^
error: 5: name 'sampler3D' is reserved
int sampler3D;
    ^^^^^^^^^
error: 6: name 'sampler3DRect' is reserved
int sampler3DRect;
    ^^^^^^^^^^^^^
error: 7: name 'samplerCube' is reserved
int samplerCube;
    ^^^^^^^^^^^
error: 9: name 'isampler1D' is reserved
int isampler1D;
    ^^^^^^^^^^
error: 10: name 'isampler2D' is reserved
int isampler2D;
    ^^^^^^^^^^
error: 11: name 'isampler3D' is reserved
int isampler3D;
    ^^^^^^^^^^
error: 12: name 'isampler1DArray' is reserved
int isampler1DArray;
    ^^^^^^^^^^^^^^^
error: 13: name 'isampler2DArray' is reserved
int isampler2DArray;
    ^^^^^^^^^^^^^^^
error: 14: name 'isampler2DRect' is reserved
int isampler2DRect;
    ^^^^^^^^^^^^^^
error: 15: name 'isampler2DMS' is reserved
int isampler2DMS;
    ^^^^^^^^^^^^
error: 16: name 'isampler2DMSArray' is reserved
int isampler2DMSArray;
    ^^^^^^^^^^^^^^^^^
error: 17: name 'isamplerBuffer' is reserved
int isamplerBuffer;
    ^^^^^^^^^^^^^^
error: 18: name 'isamplerCube' is reserved
int isamplerCube;
    ^^^^^^^^^^^^
error: 19: name 'isamplerCubeArray' is reserved
int isamplerCubeArray;
    ^^^^^^^^^^^^^^^^^
error: 21: name 'usampler1D' is reserved
int usampler1D;
    ^^^^^^^^^^
error: 22: name 'usampler2D' is reserved
int usampler2D;
    ^^^^^^^^^^
error: 23: name 'usampler3D' is reserved
int usampler3D;
    ^^^^^^^^^^
error: 24: name 'usampler1DArray' is reserved
int usampler1DArray;
    ^^^^^^^^^^^^^^^
error: 25: name 'usampler2DArray' is reserved
int usampler2DArray;
    ^^^^^^^^^^^^^^^
error: 26: name 'usampler2DRect' is reserved
int usampler2DRect;
    ^^^^^^^^^^^^^^
error: 27: name 'usampler2DMS' is reserved
int usampler2DMS;
    ^^^^^^^^^^^^
error: 28: name 'usampler2DMSArray' is reserved
int usampler2DMSArray;
    ^^^^^^^^^^^^^^^^^
error: 29: name 'usamplerBuffer' is reserved
int usamplerBuffer;
    ^^^^^^^^^^^^^^
error: 30: name 'usamplerCube' is reserved
int usamplerCube;
    ^^^^^^^^^^^^
error: 31: name 'usamplerCubeArray' is reserved
int usamplerCubeArray;
    ^^^^^^^^^^^^^^^^^
29 errors
